syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
    rpc hash(HashRequest) returns (HashResponse);
    rpc validate(ValidateRequest) returns (google.protobuf.BoolValue);
}

// HashRequest requires a user ID and a password.
message HashRequest {
    int32 userId = 1;
    string password = 2;
}

// HashResponse requires a user ID, a hashed password
// and a salt to add to the password
message HashResponse {
    int32 userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

// ValidateRequest requires the password, the hashed password and the salt added to the password
message ValidateRequest {
    string password = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

